new project header with belgian example

--- a/content/research/projects/completed/DAP1905.md
+++ b/content/research/projects/completed/DAP1905.md
@@ -6,7 +6,7 @@ prev: research/projects/
 project_image: "/images/logos/rma.png"
 project_start: "TODO"
 project_end: "TODO"
-status: 'completed'
+project_status: 'completed'
 keywords:
 
 ---
