Change all project headers to new format

--- a/content/research/projects/completed/DAP1905.md
+++ b/content/research/projects/completed/DAP1905.md
@@ -7,27 +7,21 @@ project_image: "/images/logos/rma.png"
 project_start: "TODO"
 project_end: "TODO"
 project_status: 'completed'
+project_reference: DAP 19/05 
+project_funding: TODO
+project_rma_involvement: TODO
+project_coordinator: TODO
+project_coordinator_affiliation: TODO
+project_copromotor: TODO
+project_rma_researchers: TODO
+project_partners_rma: TODO
+project_partners_BE_DEF: TODO
+project_partners_other: TODO
 keywords:
-
+- TODO
 ---
 
-{{% details title="Overview" %}}
-
-- Project code: {{% param "linkTitle" %}}
-- Start date: {{% param "project_start" %}}
-- End date: {{% param "project_end" %}}
-- Reference: DAP 19/05 
-- Royal Military Academy Involvement: TODO
-- Project Coordinator: TODO
-- Coordinator Affiliation: TODO
-- Project Co-promotor: TODO
-- RMA Researchers: TODO
-- Project Partners (RMA): TODO
-- Project Partners (BE-DEF): TODO
-- Project Partners (Other): TODO
-- Funding: TODO
-
-{{% /details %}}
+{{< projectheader >}}
 
 
 ## Context
