--- a/content/research/projects/completed/DAP 1905.md
+++ b/content/research/projects/completed/DAP 1905.md
@@ -1,13 +1,13 @@
 ---
-title: Monitoring and Modeling Physical Function and Performance in Military Rehabilitation
-linkTitle: HFM18/05
+title: The analysis of combustion plumes through hyperspectral imaging
+linkTitle: DAP 19/05
 type: docs
 prev: research/projects/
 project_image: "/images/logos/rma.png"
-project_start: "TODO"
-project_end: "TODO"
+project_start: "April 1, 2019"
+project_end: "July 30, 2023"
 project_status: 'completed'
-project_reference: TODO
+project_reference: DAP 19/05
 project_funding: "TODO"
 project_rma_involvement: TODO
 project_coordinator: "TODO"
