--- a/content/research/projects/completed/HFM 1805.md
+++ b/content/research/projects/completed/HFM 1805.md
@@ -1,13 +1,13 @@
 ---
-title: Detection and identification of chemical warfare and hazmat in the atmosphere using thermal hyperspectral and spectropolarimetric imaging
-linkTitle: SIC-08
+title: Monitoring and Modeling Physical Function and Performance in Military Rehabilitation
+linkTitle: HFM 18/05
 type: docs
 prev: research/projects/
 project_image: "/images/logos/rma.png"
-project_start: "January 1, 2014"
-project_end: "December 31, 2018"
+project_start: "TODO"
+project_end: "TODO"
 project_status: 'completed'
-project_reference: SIC-08
+project_reference: HFM 18/05
 project_funding: "TODO"
 project_rma_involvement: TODO
 project_coordinator: "TODO"
