--- a/content/research/projects/completed/HFM 1905.md
+++ b/content/research/projects/completed/HFM 1905.md
@@ -1,13 +1,13 @@
 ---
-title: Detection and identification of chemical warfare and hazmat in the atmosphere using thermal hyperspectral and spectropolarimetric imaging
-linkTitle: SIC-08
+title: Simulation Engine for Military RPAS Operations with Integrated Human Factors and Standardized Test Methodologies
+linkTitle: HFM 19/05
 type: docs
 prev: research/projects/
 project_image: "/images/logos/rma.png"
-project_start: "January 1, 2014"
-project_end: "December 31, 2018"
+project_start: "March 1, 2019"
+project_end: "December 31, 2022"
 project_status: 'completed'
-project_reference: SIC-08
+project_reference: HFM 19/05
 project_funding: "TODO"
 project_rma_involvement: TODO
 project_coordinator: "TODO"
