--- a/static/bibtex/all.bib
+++ b/static/bibtex/all.bib
@@ -62,7 +62,7 @@ edition = "2025",
   note = {To be published}}
 
 @INPROCEEDINGS{cross-spec-DA-SR-2025,
-  author={Couchard, Darius and De Meulemeester, Hannes and Haelterman, Rob},
+  author={Couchard, Darius and De Meulemeester, Hannes and Haelterman, Rob and Leroux, Sam},
   booktitle={2025 15th Workshop on Hyperspectral Imaging and Signal Processing: Evolution in Remote Sensing (WHISPERS)},  
   title={Cross-spectral Domain Adaptation for Hyperspectral Image Super-Resolution}, 
   year={2025},
