--- a/content/research/projects/completed/HFM 1805.md
+++ b/content/research/projects/completed/HFM 1805.md
@@ -3,7 +3,7 @@ title: Monitoring and Modeling Physical Function and Performance in Military Reh
 linkTitle: HFM 18/05
 type: docs
 prev: research/projects/
-project_image: "/images/logos/rma.png"
+project_image: "/images/HFM1805.jpg"
 project_start: "TODO"
 project_end: "TODO"
 project_status: 'completed'
